# intrade-bar-api-cpp

./: .gitignore  .gitmodules  BOOST_INSTALL.md  CMakeLists.txt  README.md
code_blocks/: README.md
code_blocks/bo_open_time_testing/: bo_open_time_testing.cbp  main.cpp
code_blocks/build_brotli/: build_brotli.cbp
code_blocks/build_zstd/: build_zstd.cbp
code_blocks/example-websocket/: example-websocket.cbp  main.cpp  run.bat
code_blocks/example-websocket-v2/: example-websocket-v2.cbp  main.cpp
code_blocks/example_api/: example_api.cbp  main.cpp
code_blocks/example_historical_data/: README.md  example_historical_data.cbp  main.cpp
code_blocks/intrade-bar-downloader/: README.md  README.txt  intrade-bar-downloader.cbp  main.cpp  settings-intrade-bar-downloader.json
code_blocks/intrade-bar-downloader-v2/: intrade-bar-downloader-v2.cbp  main.cpp
code_blocks/test_curl/: main.cpp  test_curl.cbp
code_blocks_testing/: README.md
code_blocks_testing/check-websocket/: check-websocket.cbp  main.cpp
code_blocks_testing/check_bo_logger/: check_bo_logger.cbp  main.cpp
code_blocks_testing/check_classic_bo_open/: check_classic_bo_open.cbp  main.cpp
code_blocks_testing/check_print_line/: check_print_line.cbp  main.cpp
code_blocks_testing/check_ring_buffer/: check_ring_buffer.cbp  main.cpp
code_blocks_testing/check_user_id/: check_user_id.cbp  main.cpp
code_blocks_testing/checking_general_api/: checking_general_api.cbp  main.cpp
code_blocks_testing/checking_general_api_open_bo/: checking_general_api_open_bo.cbp  main.cpp
doc/: README.md
extension/intrade-bar-api/: content.js  manifest.json  popup.html  popup.js
include/: intrade-bar-api.hpp  intrade-bar-common.hpp  intrade-bar-https-api.hpp  intrade-bar-logger.hpp  intrade-bar-websocket-api-v2.hpp  intrade-bar-websocket-api.hpp  intrade-bar_api.hpp
js_implementation/: page.html
js_implementation/js/: runner.js
src/: MainHandler.cpp
